--- a/css/styles.css
+++ b/css/styles.css
@@ -730,13 +730,11 @@ lds-roller {
 }
 
 .fa-face-frown {
-  transform: scale(5);
   color: #007bff;
   margin-bottom: 1rem;
 }
 
 .no-result-text {
-  font-size: 2.3rem;
   color: #da0037;
   text-align: center;
   line-height: 45px;
